# banGRAPPLE

./: .gitignore  AGENTS.md  Cargo.toml  README.md  payloadv2-ordered.txt  payloadv2-report.json  payloadv2-witnesses.jsonl  payloadv2-witnesses.tsv  ty.py
docs/: architecture.md  milestones.md  payloadv2-yaa.md
scripts/: cache_view.py  classify_broken_symlink_causes.py  grapple.py  links_semantic_matrix.py  object_graph_census.py  payloadv2_probe.py  ridiff_probe.py  yaa_to_tar.py
src/: assets.rs  audit.rs  basesystem.rs  bootloader.rs  cache.rs  catalog.rs  compose.rs  disk.rs  dmg.rs  downloader.rs  image.rs  installer.rs  lib.rs  main.rs  manifest.rs  patch.rs  pipeline.rs  rebuild.rs  substrate.rs  tui.rs  xar.rs  yaa.rs
tests/fixtures/: sample_catalog.plist  sample_image_index.json  sample_image_manifest.json
