[package]
name = "ban-grapple"
version = "0.1.0"
edition = "2024"
description = "Linux-native macOS installer builder scaffold"
license = "MIT"

[dependencies]
base64 = "0.22"
flate2 = "1.1"
libc = "0.2"
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
xz2 = "0.1"

[lib]
name = "ban_grapple"
path = "src/lib.rs"

[[bin]]
name = "ban-grapple"
path = "src/main.rs"
